--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
             <p class="text-xl md:text-2xl opacity-80 mb-8">Computer Engineering / Embedded Systems</p>
             
             <div class="flex justify-center space-x-4">
-                <a href="#projects" class="px-6 py-3 bg-gray-800 hover:bg-gray-700 rounded-lg transition-all border border-gray-700 flex items-center">
-                    <i data-feather="folder" class="mr-2"></i> Projects
-                </a>
                  <a href="#resume" class="px-6 py-3 bg-gray-800 hover:bg-gray-700 rounded-lg transition-all border border-gray-700 flex items-center">
                     <i data-feather="clipboard" class="mr-2"></i> Resume
                 </a>
@@ -61,34 +58,48 @@
 
                 <div class="bg-gray-800 bg-opacity-50 rounded-xl p-6 border border-gray-700">
                     <h3 class="text-2xl font-bold mb-2">Web-Enabled LED Strip Controller</h3>
-                    <p class="text-gray-300 mb-4">A CSS framework for creating frosted glass effects with pure CSS.</p>
+                    <p class="text-gray-300 mb-4">A MOSFET based rgb fading library for ESP8266. An iOS app configures the lights and pattern through a simple free REST server.</p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">CSS</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">JavaScript</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Design</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">C++</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Swift</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">REST</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Espressif</span>
                     </div>
                 </div>
 
                 <div class="bg-gray-800 bg-opacity-50 rounded-xl p-6 border border-gray-700">
                     <h3 class="text-2xl font-bold mb-2">AtTiny85 Embedded Watch Project</h3>
-                    <p class="text-gray-300 mb-4">A markdown-based blog system with terminal-style output.</p>
+                    <p class="text-gray-300 mb-4">Embedded microcontroller system with peripherals like an OLED screen, RTC, battery, 13 Mhz radio, and support for bluetooth. Additional features include battery level monitoring, a laser pointer, and the no-ram graphics library.</p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Node.js</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Markdown</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">CLI</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">C</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">AtTiny85</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">I2C</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">KiKad</span>
                     </div>
                 </div>
 
 
                 <div class="bg-gray-800 bg-opacity-50 rounded-xl p-6 border border-gray-700">
-                    <h3 class="text-2xl font-bold mb-2">Objective C Alternative Hooking Mechanism</h3>
-                    <p class="text-gray-300 mb-4">A CSS framework for creating frosted glass effects with pure CSS.</p>
+                    <h3 class="text-2xl font-bold mb-2">Artifact - Objective C Alternative Hooking Mechanism</h3>
+                    <p class="text-gray-300 mb-4">A library for iOS environments, interposing the Objective-C message mechanism. Control flow is monitored, directed, and subverted by a handler function. Optimized for non-significant impact on processing speed. Useful for hiding hooking mechanism or studying control flow.</p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">CSS</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">JavaScript</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Design</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">iOS</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">ARM64 ASM</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">C</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Objective-C</span>
                     </div>
                 </div>
+
+                <div class="bg-gray-800 bg-opacity-50 rounded-xl p-6 border border-gray-700">
+                    <h3 class="text-2xl font-bold mb-2">Analog Guitar Effects</h3>
+                    <p class="text-gray-300 mb-4">Simple audio amplifiers and effects for guitar "pedal" applications, using parts from a local surplus store. Old analog electronics made into boost and distortion preamps.</p>
+                    <div class="flex flex-wrap gap-2">
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Analog Electronics</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Small Signal</span>
+                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Transistors</span>
+                    </div>
+                </div>
+                
             </div>
         </section>
 
@@ -113,11 +124,10 @@
     </main>
 
     <footer class="text-center py-8 text-gray-500 text-sm">
-        <p>© 2023 Glassy Terminal Thoughts. All thoughts are my own.</p>
+        <p>© 2026 gahm.dev - personal project archive</p>
     </footer>
 
     <script src="script.js"></script>
     <script>feather.replace();</script>
-<script src="https://huggingface.co/deepsite/deepsite-badge.js"></script>
 </body>
 </html>
