--- a/index.html
+++ b/index.html
@@ -55,50 +55,57 @@
         <section id="projects" class="mb-24">
             <h2 class="text-3xl font-bold mb-8 border-b border-gray-700 pb-2">Projects</h2>
             <div class="space-y-6">
-
-                <div class="bg-gray-800 bg-opacity-50 rounded-xl p-6 border border-gray-700">
-                    <h3 class="text-2xl font-bold mb-2">Web-Enabled LED Strip Controller</h3>
-                    <p class="text-gray-300 mb-4">A MOSFET based rgb fading library for ESP8266. An iOS app configures the lights and pattern through a simple free REST server.</p>
-                    <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">C++</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Swift</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">REST</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Espressif</span>
+                
+                <a href="nodestrip.html">
+                    <div class="bg-gray-800 bg-opacity-50 rounded-xl p-6 border border-gray-700 hover:border-gray-600 transition-all">
+                        <h3 class="text-2xl font-bold mb-2">Web-Enabled LED Strip Controller</h3>
+                        <p class="text-gray-300 mb-4">A MOSFET based rgb fading library for ESP8266. An iOS app configures the lights and pattern through a simple free REST server.</p>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">C++</span>
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Swift</span>
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">REST</span>
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Espressif</span>
+                        </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="bg-gray-800 bg-opacity-50 rounded-xl p-6 border border-gray-700">
-                    <h3 class="text-2xl font-bold mb-2">AtTiny85 Embedded Watch Project</h3>
-                    <p class="text-gray-300 mb-4">Embedded microcontroller system with peripherals like an OLED screen, RTC, battery, 13 Mhz radio, and support for bluetooth. Additional features include battery level monitoring, a laser pointer, and the no-ram graphics library.</p>
-                    <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">C</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">AtTiny85</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">I2C</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">KiKad</span>
+                <a href="tinywatch.html">
+                    <div class="bg-gray-800 bg-opacity-50 rounded-xl p-6 border border-gray-700 hover:border-gray-600 transition-all">
+                        <h3 class="text-2xl font-bold mb-2">AtTiny85 Embedded Watch Project</h3>
+                        <p class="text-gray-300 mb-4">Embedded microcontroller system with peripherals like an OLED screen, RTC, battery, 13 Mhz radio, and support for bluetooth. Additional features include battery level monitoring, a laser pointer, and the no-ram graphics library.</p>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">C</span>
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">AtTiny85</span>
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">I2C</span>
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">KiKad</span>
+                        </div>
                     </div>
-                </div>
+                </a>
 
-
-                <div class="bg-gray-800 bg-opacity-50 rounded-xl p-6 border border-gray-700">
-                    <h3 class="text-2xl font-bold mb-2">Artifact - Objective C Alternative Hooking Mechanism</h3>
-                    <p class="text-gray-300 mb-4">A library for iOS environments, interposing the Objective-C message mechanism. Control flow is monitored, directed, and subverted by a handler function. Optimized for non-significant impact on processing speed. Useful for hiding hooking mechanism or studying control flow.</p>
-                    <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">iOS</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">ARM64 ASM</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">C</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Objective-C</span>
+                <a href="artifact.html">
+                    <div class="bg-gray-800 bg-opacity-50 rounded-xl p-6 border border-gray-700 hover:border-gray-600 transition-all">
+                        <h3 class="text-2xl font-bold mb-2">Artifact - Objective C Alternative Hooking Mechanism</h3>
+                        <p class="text-gray-300 mb-4">A library for iOS environments, interposing the Objective-C message mechanism. Control flow is monitored, directed, and subverted by a handler function. Optimized for non-significant impact on processing speed. Useful for hiding hooking mechanism or studying control flow.</p>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">iOS</span>
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">ARM64 ASM</span>
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">C</span>
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Objective-C</span>
+                        </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="bg-gray-800 bg-opacity-50 rounded-xl p-6 border border-gray-700">
-                    <h3 class="text-2xl font-bold mb-2">Analog Guitar Effects</h3>
-                    <p class="text-gray-300 mb-4">Simple audio amplifiers and effects for guitar "pedal" applications, using parts from a local surplus store. Old analog electronics made into boost and distortion preamps.</p>
-                    <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Analog Electronics</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Small Signal</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Transistors</span>
+                <a href="pedals.html">
+                    <div class="bg-gray-800 bg-opacity-50 rounded-xl p-6 border border-gray-700 hover:border-gray-600 transition-all">
+                        <h3 class="text-2xl font-bold mb-2">Analog Guitar Effects</h3>
+                        <p class="text-gray-300 mb-4">Simple audio amplifiers and effects for guitar "pedal" applications, using parts from a local surplus store. Old analog electronics made into boost and distortion preamps.</p>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Analog Electronics</span>
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Small Signal</span>
+                            <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Transistors</span>
+                        </div>
                     </div>
-                </div>
+                </a>
                 
             </div>
         </section>
