--- a/pedals.html
+++ b/pedals.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Post | Glassy Terminal</title>
+    <title>gahm.dev</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
@@ -70,7 +70,7 @@
     </main>
 
     <footer class="text-center py-8 text-gray-500 text-sm">
-        <p>© 2023 Glassy Terminal Thoughts. All thoughts are my own.</p>
+        <p>© 2026 gahm.dev - do something different.</p>
     </footer>
 
     <script src="components/navbar.js"></script>
